--- a/layouts/posts.html
+++ b/layouts/posts.html
@@ -24,26 +24,6 @@
             </ul>
         </div>
         <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.js'></script>
-        <script>
-            var app = angular.module('app', [])
-            app.controller('PostsCtrl', function ($scope, $http) {
-                $http.get('http://localhost:3000/api/posts')
-                .success(function (posts) {
-                    $scope.posts = posts
-                })
-
-                $scope.addPost = function () {
-                    if ($scope.postBody) {
-                        $http.post('/api/posts', {
-                            username:   'scrich',
-                            body:       $scope.postBody
-                        }).success(function (post) {
-                            $scope.posts.unshift(post)
-                            $scope.postBody = null
-                        })
-                    }
-                }
-            })
-        </script>
+        <script src='/app.js'></script>
     </body>
 </html>
